@@ -50,39 +50,39 @@
       <a href="http://download.gnome.org/sources/tomboy/0.12/tomboy-0.12.2.tar.gz"
       title="Source code of the latest stable release">
       <img src="./images/package-x-generic.png" alt="source package" />
-      Tomboy 0.12.2</a></div>
+      Tomboy 0.12.2 (Linux tarball)</a></div>
 
     <h3>Past releases</h3>
       <div class="download">
       <a href="http://download.gnome.org/sources/tomboy/0.12/tomboy-0.12.1.tar.gz"
       title="Source code of the latest stable release">
       <img src="./images/package-x-generic.png" alt="source package" />
-      Tomboy 0.12.1</a></div>
+      Tomboy 0.12.1 (Linux tarball)</a></div>
       <div class="download">
       <a href="http://download.gnome.org/sources/tomboy/0.12/tomboy-0.12.0.tar.gz"
       title="Source code of the latest stable release">
       <img src="./images/package-x-generic.png" alt="source package" />
-      Tomboy 0.12.0</a></div>
+      Tomboy 0.12.0 (Linux tarball)</a></div>
       <div class="download">
       <a href="http://download.gnome.org/sources/tomboy/0.10/tomboy-0.10.0.tar.gz"
       title="Source code of the latest stable release">
       <img src="./images/package-x-generic.png" alt="source package" />
-      Tomboy 0.10.0</a></div>
+      Tomboy 0.10.0 (Linux tarball)</a></div>
       <div class="download">
       <a href="http://download.gnome.org/sources/tomboy/0.8/tomboy-0.8.2.tar.gz"
       title="Source code of the latest stable release">
       <img src="./images/package-x-generic.png" alt="source package" />
-      Tomboy 0.8.2</a></div>
+      Tomboy 0.8.2 (Linux tarball)</a></div>
       <div class="download">
       <a href="http://download.gnome.org/sources/tomboy/0.8/tomboy-0.8.1.tar.gz"
       title="Source code of the latest stable release">
       <img src="./images/package-x-generic.png" alt="source package" />
-      Tomboy 0.8.1</a></div>
+      Tomboy 0.8.1 (Linux tarball)</a></div>
       <div class="download">
       <a href="http://download.gnome.org/sources/tomboy/0.8/tomboy-0.8.0.tar.gz"
       title="Source code of the latest stable release">
       <img src="./images/package-x-generic.png" alt="source package" />
-      Tomboy 0.8.0</a></div>
+      Tomboy 0.8.0 (Linux tarball)</a></div>
     </div>
     
     <div id="right">
@@ -95,43 +95,73 @@
       
     <h3>Latest release</h3>
       <div class="download">
-      <a href="http://download.gnome.org/sources/tomboy/0.13/tomboy-0.13.2.tar.gz"
+      <a href="http://download.gnome.org/sources/tomboy/0.13/tomboy-0.13.3.tar.gz"
       title="Source code of the latest unstable release">
       <img src="./images/package-x-generic.png" alt="source package" />
-      Tomboy 0.13.2</a></div> 
+      Tomboy 0.13.3 (Linux tarball)</a></div> 
 
       <!--<p>There is currently no separate development release.</p>-->
       
     <h3>Past releases</h3>
       <div class="download">
+      <a href="http://download.gnome.org/sources/tomboy/0.13/tomboy-0.13.2.tar.gz"
+      title="Source code of the latest unstable release">
+      <img src="./images/package-x-generic.png" alt="source package" />
+      Tomboy 0.13.2 (Linux tarball)</a></div> 
+
+      <div class="download">
       <a href="http://download.gnome.org/sources/tomboy/0.13/tomboy-0.13.1.tar.gz"
       title="Source code of the latest unstable release">
       <img src="./images/package-x-generic.png" alt="source package" />
-      Tomboy 0.13.1</a></div> 
+      Tomboy 0.13.1 (Linux tarball)</a></div> 
 
       <div class="download">
       <a href="http://download.gnome.org/sources/tomboy/0.11/tomboy-0.11.3.tar.gz"
       title="Source code of the latest unstable release">
       <img src="./images/package-x-generic.png" alt="source package" />
-      Tomboy 0.11.3</a></div> 
+      Tomboy 0.11.3 (Linux tarball)</a></div> 
 
       <div class="download">
       <a href="http://download.gnome.org/sources/tomboy/0.11/tomboy-0.11.2.tar.gz"
       title="Source code of the latest unstable release">
       <img src="./images/package-x-generic.png" alt="source package" />
-      Tomboy 0.11.2</a></div> 
+      Tomboy 0.11.2 (Linux tarball)</a></div> 
 
       <div class="download">
       <a href="http://download.gnome.org/sources/tomboy/0.11/tomboy-0.11.1.tar.gz"
       title="Source code of the latest unstable release">
       <img src="./images/package-x-generic.png" alt="source package" />
-      Tomboy 0.11.1</a></div> 
+      Tomboy 0.11.1 (Linux tarball)</a></div> 
 
       <div class="download">
       <a href="http://download.gnome.org/sources/tomboy/0.11/tomboy-0.11.0.tar.gz"
       title="Source code of the latest unstable release">
       <img src="./images/package-x-generic.png" alt="source package" />
-      Tomboy 0.11.0</a></div> 
+      Tomboy 0.11.0 (Linux tarball)</a></div>
+
+    <h2>Preview builds for Windows and Mac</h2>
+      <p>These are binaries of the development version of Tomboy, provided as
+      an MSI installer for Windows and a DMG disk image for Mac. This version is likely to
+      have bugs. Please help us to track'em down. Visit the
+      <a href="./getinvolved.html">Get involved</a> page.</p>
+      
+    <h3>Latest release</h3>
+      <div class="download">
+      Tomboy 0.13.3 |
+      <a href="http://download.gnome.org/binaries/win32/tomboy/0.13/Tomboy-0.13.3.msi"
+      title="Preview Windows build of the latest unstable release">(Windows installer)</a> | 
+      <a href="http://download.gnome.org/binaries/mac/tomboy/0.13/Tomboy-0.13.3.dmg"
+      title="Preview Mac build of the latest unstable release">(Mac OS X DMG)</a></div> 
+
+      <!--<p>There is currently no separate development release.</p>-->
+      
+    <h3>Past releases</h3>
+      <div class="download">
+      Tomboy 0.13.0 |
+      <a href="http://download.gnome.org/binaries/win32/tomboy/0.13/Tomboy-0.13.0.msi"
+      title="Preview Windows build of the latest unstable release">(Windows installer)</a> | 
+      <a href="http://download.gnome.org/binaries/mac/tomboy/0.13/Tomboy-0.13.0.dmg"
+      title="Preview Mac build of the latest unstable release">(Mac OS X DMG)</a></div> 
     </div>
   </body>
 </html>
