@@ -71,6 +71,18 @@
         <div id="news">
 	    <h2 class="">News</h2>
 
+	    <h3>January 24, 2009</h3>
+   	      <b>Unstable</b> version 0.13.3 released!  New features since
+   	      version 0.12.0 include:
+   	      <ul>
+   	        <li>Preview builds for Windows and Mac OS X.</li>
+   	        <li>Faster startup and 25% or more memory reduction with large note collections.</li>
+		<li>Fix bug that could cause notes to be mistakenly deleted during synchronization.</li>
+		<li>Fix panel applet icon background transparency issues in many themes.</li>
+   	        <li>And <a href="http://svn.gnome.org/viewcvs/tomboy/tags/TOMBOY_0_13_3/NEWS?view=markup">more</a></li>
+              </ul>
+   	      <a href="download.html">Download it</a>
+
 	    <h3>December 17, 2008</h3>
    	      <b>Stable</b> version 0.12.2 released!  New features since
    	      version 0.12.0 include:
