@@ -1,3 +1,8 @@
+2008-01-25  Sandy Armstrong  <sanfordarmstrong@gmail.com>
+
+	* index.html: Updated for 0.13.3 release.
+	* download.html: Ditto, and added Windows/Mac section
+
 2008-12-17  Sandy Armstrong  <sanfordarmstrong@gmail.com>
 
 	* index.html: Updated for 0.12.2 release.
